Add more text about image segmentation

--- a/notebooks/photometry/01.04.02-image-segmentation-XDF.ipynb
+++ b/notebooks/photometry/01.04.02-image-segmentation-XDF.ipynb
@@ -89,9 +89,9 @@
     "\n",
     "## Creating a `SegmentationImage`\n",
     "\n",
-    "In `photutils`, image segmentation maps are created using the threshold method in the `detect_sources()` function. This method identifies all of the objects in the data that have signals above a determined **`threshold`** (usually defined as a multiple of the standard deviation) and that have more than a defined number of adjoining pixels, **`npixels`**. The data can also optionally be smoothed using a kernel, **`filter_kernel`**, before applying the threshold cut.\n",
+    "In [`photutils`](https://photutils.readthedocs.io/en/stable/), image segmentation maps are created using the threshold method in the [`detect_sources`](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.detect_sources.html#photutils.segmentation.detect_sources) function. This method identifies all of the objects in the data that have signals above a determined **`threshold`** (usually defined as a multiple of the standard deviation) and that have more than a defined number of adjoining pixels, **`npixels`**. The data can also optionally be smoothed using a kernel, **`filter_kernel`**, before applying the threshold cut.\n",
     "\n",
-    "The `detect_sources()` function returns a `SegmentationImage` object: an array in which each object is labeled with an integer. As a simple example, a segmentation map containing two distinct sources might look like this:\n",
+    "The [`detect_sources`](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.detect_sources.html#photutils.segmentation.detect_sources) function returns a [`SegmentationImage`](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.SegmentationImage.html#photutils.segmentation.SegmentationImage) object: an array in which each object is labeled with an integer. As a simple example, a segmentation map containing two distinct sources might look like this:\n",
     "\n",
     "```\n",
     "0 0 0 0 0 0 0 0 0 0\n",
@@ -106,7 +106,7 @@
     "```\n",
     "where all of the pixels labeled `1` belong to the first source, all those labeled `2` belong to the second, and all null pixels are designated to be background.\n",
     "\n",
-    "Let's see what the segmentation map for our XDF data will look like."
+    "Let's see make the segmentation image for the XDF see what that segmentation map looks like."
    ]
   },
   {
@@ -120,12 +120,21 @@
     "threshold = 5. * std\n",
     "npixels = 10\n",
     "fwhm = 5\n",
-    "kernel = make_2dgaussian_kernel(fwhm, size=5)\n",
+    "kernel_size = 5\n",
+    "kernel = make_2dgaussian_kernel(fwhm, size=kernel_size)\n",
     "convolved_data = convolve(xdf_image.data, kernel)\n",
     "# Create a segmentation image\n",
     "segm = detect_sources(convolved_data, threshold, npixels)\n",
     "\n",
     "print('Found {} sources'.format(segm.max_label))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99298087-4b26-4eab-8a9b-deb3aea08fb5",
+   "metadata": {},
+   "source": [
+    "The number of sources found with this method is similar to that found with the other methods we have considered. A more detailed comparison is made later in this section."
    ]
   },
   {
@@ -152,16 +161,14 @@
     "ax1.set_title('Original Data')\n",
     "\n",
     "# Plot the segmentation image\n",
-    "rand_cmap = make_random_cmap(seed=12345)\n",
-    "rand_cmap.set_under('black')\n",
-    "segplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, segm), vmin=1, cmap=rand_cmap)\n",
+    "segplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, segm), vmin=1, cmap=segm.cmap)\n",
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('Segmentation Map')\n",
     "\n",
-    "# Define the colorbar\n",
-    "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
-    "cbar = plt.colorbar(segplot, cbar_ax)\n",
-    "cbar.set_label('Object Label', rotation=270, labelpad=30)"
+    "# # Define the colorbar\n",
+    "# cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
+    "# cbar = plt.colorbar(segplot, cbar_ax)\n",
+    "# cbar.set_label('Object Label', rotation=270, labelpad=30)"
    ]
   },
   {
@@ -176,79 +183,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9bb56ee-c640-4c69-976e-e6f2e3ef536c",
-   "metadata": {},
-   "source": [
-    "For a closer look, let's see what the sources we found with `find_peaks` look like in this segmentation map:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1d61489-3595-46b9-aaaf-57f11ac2126d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with warnings.catch_warnings(action=\"ignore\"):\n",
-    "    sources_findpeaks = find_peaks(xdf_image.data - median, mask=xdf_image.mask,\n",
-    "                                   threshold=20. * std, box_size=29,\n",
-    "                                   centroid_func=centroid_2dg)\n",
-    "\n",
-    "# Add an ID column to the find_peaks result\n",
-    "sources_findpeaks[\"source_id\"] = np.arange(len(sources_findpeaks))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1176098d-8a00-402d-9220-a1c54044c0c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(8, 2.5))\n",
-    "sub_figs = fig.subfigures(nrows=2, ncols=4, wspace=0.01, hspace=0.01)\n",
-    "\n",
-    "cutout_size = 60\n",
-    "rng = np.random.default_rng(seed=8675309)\n",
-    "srcs = rng.permutation(sources_findpeaks)[:len(sub_figs.flatten())]\n",
-    "for a_fig, src in zip(sub_figs.flatten(), srcs):\n",
-    "    sub_axs = a_fig.subplot_mosaic([[\"orig\", \"segm\"]], sharex=True, sharey=True, )\n",
-    "    left = int(src['x_peak'] - cutout_size)\n",
-    "    bottom = int(src['y_peak'] - cutout_size)\n",
-    "    right = left + 2 * cutout_size\n",
-    "    top = bottom + 2 * cutout_size\n",
-    "    slc = (slice(bottom, top), slice(left, right))\n",
-    "    sources_in_cutout = ((left < sources_findpeaks[\"x_centroid\"]) & (sources_findpeaks[\"x_centroid\"] < right) &\n",
-    "                         (bottom < sources_findpeaks[\"y_centroid\"]) & (sources_findpeaks[\"y_centroid\"] < top))\n",
-    "    sub_axs[\"orig\"].imshow(xdf_image.data[slc], cmap=cmap, norm=norm_image, origin=\"lower\")\n",
-    "    sub_axs[\"orig\"].scatter(sources_findpeaks[\"x_centroid\"][sources_in_cutout] - left, \n",
-    "                            sources_findpeaks[\"y_centroid\"][sources_in_cutout] - bottom, \n",
-    "                            marker=\"x\", color=\"orange\", s=100)\n",
-    "\n",
-    "    sub_axs[\"segm\"].imshow(segm.data[slc], cmap=rand_cmap, vmin=1, vmax=len(sources_findpeaks), origin=\"lower\")\n",
-    "    src_id = src[\"source_id\"]\n",
-    "    # ax.text(2, 2, str(src_id), color='w', va='top')\n",
-    "    a_fig.suptitle(f\"Source {src_id}\", fontsize=10)\n",
-    "\n",
-    "    for ax in sub_axs.values():\n",
-    "        ax.set_xticks([])\n",
-    "        ax.set_yticks([])\n",
-    "\n",
-    "fig.suptitle(\"Comparison of find_peaks and segmentation sources\", y=1.1);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3e15e7d8-3aa9-4b75-ab03-88d3d6461eb5",
    "metadata": {},
    "source": [
     "## Analyzing `source_properties`\n",
     "\n",
-    "Once we have a `SegmentationImage` object, `photutils` provides many powerful tools to manipulate and analyze the identified objects. \n",
+    "Once we have a [`SegmentationImage`](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.SegmentationImage.html#photutils.segmentation.SegmentationImage) object, [`photutils`](https://photutils.readthedocs.io/en/stable/) provides many powerful tools to manipulate and analyze the identified objects. \n",
     "\n",
     "Individual objects within the segmentation map can be altered using methods such as `relabel` to change the labels of objects, `remove_labels` to remove objects, or `deblend_sources` to separating overlapping sources that were incorrectly labeled as one source.\n",
     "\n",
-    "However, perhaps the most powerful aspect of the `SegmentationImage` is the ability to create a catalog using [SourceCatalog](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.SourceCatalog.html#photutils.segmentation.SourceCatalog) to measure the centroids, photometry, and morphology of the detected objects:"
+    "However, perhaps the most powerful aspect of the [`SegmentationImage`](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.SegmentationImage.html#photutils.segmentation.SegmentationImage) is the ability to create a catalog using [`SourceCatalog`](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.SourceCatalog.html#photutils.segmentation.SourceCatalog) to measure the centroids, photometry, and morphology of the detected objects:"
    ]
   },
   {
@@ -335,6 +279,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7a68668-bf36-46f0-9efa-8063f9643bcd",
+   "metadata": {},
+   "source": [
+    "## Comparison with other detection methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9bb56ee-c640-4c69-976e-e6f2e3ef536c",
+   "metadata": {},
+   "source": [
+    "We begin by finding sources using [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) and [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1d61489-3595-46b9-aaaf-57f11ac2126d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with warnings.catch_warnings(action=\"ignore\"):\n",
+    "    sources_findpeaks = find_peaks(xdf_image.data - median, mask=xdf_image.mask,\n",
+    "                                   threshold=20. * std, box_size=29,\n",
+    "                                   centroid_func=centroid_2dg)\n",
+    "\n",
+    "# Add an ID column to the find_peaks result\n",
+    "sources_findpeaks[\"source_id\"] = np.arange(len(sources_findpeaks))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "19c62f54-3040-4ec8-9c12-f02d271e3ac4",
@@ -343,6 +319,76 @@
    "source": [
     "daofind = DAOStarFinder(fwhm=fwhm, threshold=threshold)\n",
     "sources_dao = daofind(np.ma.masked_where(xdf_image.mask, xdf_image))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bf12c49-34d3-498e-9586-1525ce1022ea",
+   "metadata": {},
+   "source": [
+    "A plot of a random subset of sources highlights the differences between the methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1176098d-8a00-402d-9220-a1c54044c0c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(8, 2.5))\n",
+    "sub_figs = fig.subfigures(nrows=2, ncols=4, wspace=0.01, hspace=0.01)\n",
+    "\n",
+    "cutout_size = 60\n",
+    "rng = np.random.default_rng(seed=8675309)\n",
+    "srcs = rng.permutation(sources_findpeaks)[:len(sub_figs.flatten())]\n",
+    "for a_fig, src in zip(sub_figs.flatten(), srcs):\n",
+    "    sub_axs = a_fig.subplot_mosaic([[\"orig\", \"segm\"]], sharex=True, sharey=True, )\n",
+    "    left = int(src['x_peak'] - cutout_size)\n",
+    "    bottom = int(src['y_peak'] - cutout_size)\n",
+    "    right = left + 2 * cutout_size\n",
+    "    top = bottom + 2 * cutout_size\n",
+    "    slc = (slice(bottom, top), slice(left, right))\n",
+    "    sources_in_cutout_fp = ((left < sources_findpeaks[\"x_centroid\"]) & (sources_findpeaks[\"x_centroid\"] < right) &\n",
+    "                             (bottom < sources_findpeaks[\"y_centroid\"]) & (sources_findpeaks[\"y_centroid\"] < top))\n",
+    "    sources_in_cutout_dao = ((left < sources_dao[\"xcentroid\"]) & (sources_dao[\"xcentroid\"] < right) &\n",
+    "                             (bottom < sources_dao[\"ycentroid\"]) & (sources_dao[\"ycentroid\"] < top))\n",
+    "    sub_axs[\"orig\"].imshow(xdf_image.data[slc], cmap=cmap, norm=norm_image, origin=\"lower\")\n",
+    "    sub_axs[\"orig\"].scatter(sources_findpeaks[\"x_centroid\"][sources_in_cutout_fp] - left, \n",
+    "                            sources_findpeaks[\"y_centroid\"][sources_in_cutout_fp] - bottom, \n",
+    "                            marker=\"x\", color=\"orange\", s=100, label=\"Find peaks\")\n",
+    "    sub_axs[\"orig\"].scatter(sources_dao[\"xcentroid\"][sources_in_cutout_dao] - left, \n",
+    "                            sources_dao[\"ycentroid\"][sources_in_cutout_dao] - bottom, \n",
+    "                            marker=\"s\", facecolor=\"none\", edgecolor=\"cyan\", s=200, \n",
+    "                            alpha=0.5, label=\"DAOFind\")\n",
+    "\n",
+    "    sub_axs[\"segm\"].imshow(segm.data[slc], cmap=rand_cmap, vmin=1, vmax=len(sources_findpeaks), origin=\"lower\")\n",
+    "    src_id = src[\"source_id\"]\n",
+    "    # ax.text(2, 2, str(src_id), color='w', va='top')\n",
+    "    a_fig.suptitle(f\"Source {src_id}\", fontsize=10)\n",
+    "\n",
+    "    for ax in sub_axs.values():\n",
+    "        ax.set_xticks([])\n",
+    "        ax.set_yticks([])\n",
+    "\n",
+    "fig.suptitle(\"'Source detection method comparison\", y=1.1)\n",
+    "a_fig.legend(ncols=2, bbox_to_anchor=(-.2, 0.2));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fabfbef0-e62a-41a9-974a-4a7b5210fcc8",
+   "metadata": {},
+   "source": [
+    "Star finding finds almost all of the point-like sources in these cutouts, but also identifies many sources in each extended object. Peak finding misses many of the star-like objects and sometimes assigns multiple objects to a single extended source. Image segmentation identifies extended sources as single objects but misses most of the small star-like objects. Adjusting the image segmentation parameters to allow smaller sources would improve detection of those objects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a700cbb-593c-4a72-b2ef-b1b54a850aa5",
+   "metadata": {},
+   "source": [
+    "We now look at the large galaxy near the top center of the XDF. Image segmentation is the only method that correctly identifies that large galaxy as a single object."
    ]
   },
   {
@@ -368,7 +414,7 @@
     "ax1.scatter(sources_findpeaks[\"x_centroid\"], sources_findpeaks[\"y_centroid\"], \n",
     "            marker=\"x\", color=\"orange\", s=200, lw=2, alpha=0.7, label=\"find_peaks\")\n",
     "\n",
-    "# Add find_peaks sources\n",
+    "# Add DAOStarFinder sources\n",
     "ax1.scatter(sources_dao[\"xcentroid\"], sources_dao[\"ycentroid\"], \n",
     "            marker=\"s\", facecolor=\"none\", edgecolor=\"cyan\", s=200, alpha=0.5, label=\"DAOFind\")\n",
     "\n",
@@ -422,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
