--- a/notebooks/photometry/01.04.03-image-segmentation-Feder.ipynb
+++ b/notebooks/photometry/01.04.03-image-segmentation-Feder.ipynb
@@ -5,7 +5,7 @@
    "id": "96ae52db-95b9-4f7b-a68e-712789addc7f",
    "metadata": {},
    "source": [
-    "# Image segmentation in a stellar image"
+    "# Application to a stellar image"
    ]
   },
   {
@@ -13,13 +13,13 @@
    "id": "4a539fa2-f180-4b88-a620-da47c6af8270",
    "metadata": {},
    "source": [
-    "## Data are used in this notebook?\n",
+    "## Data used in this notebook\n",
     "\n",
     "The image in this notebook is of the field of the star [TIC 125489084](https://exofop.ipac.caltech.edu/tess/target.php?id=125489084) on a night when the moon was nearly full. The moonlight caused a smooth gradient across the background of the image.\n",
     "\n",
-    "As discussed in NOTEBOOK ABOUT BACKGROUND SUBTRACTION, the best way to remove the background in this case is to use photutils to construct a 2D model of the background. \n",
+    "As discussed in the section about [background subtraction with this image](01.01.03-Background-estimation-FEDER.ipynb), the best way to remove the background in this case is to use [`photutils`](https://photutils.readthedocs.io/en/stable/) to construct a 2D model of the background.  \n",
     "\n",
-    "As we will see in a moment, [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) does a good job identifying most of the sources in the image, since all of the sources are stars."
+    "As we will see shortly, image segmentation doesn't significantly improve source detection in this case, since all of the sources are stars."
    ]
   },
   {
@@ -50,6 +50,14 @@
     "\n",
     "# Show plots in the notebook\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0e18811-4d0e-4799-9d58-7d100ce8fc3c",
+   "metadata": {},
+   "source": [
+    "In the next cell, we read the data, mask out the edges and subtract the two dimensional background."
    ]
   },
   {
@@ -104,40 +112,7 @@
    "id": "21c15890-d5d2-4f5a-a1dd-7795e0f609a7",
    "metadata": {},
    "source": [
-    "Beyond traditional source detection methods, an additional option for identifying sources in image data is a process called **image segmentation**. This method identifies and labels contiguous (connected) objects within an image. \n",
-    "\n",
-    "You might have noticed that, in the previous source detection algorithms, large and extended sources are often incorrectly identified as more than one source. Segmentation would label all the pixels within a large galaxy as belonging to the same object, and would allow the user to then measure the photometry, centroid, and morphology of the entire object at once.\n",
-    "\n",
-    "#### Creating a `SegmentationImage`\n",
-    "\n",
-    "In `photutils`, image segmentation maps are created using the threshold method in the `detect_sources()` function. This method identifies all of the objects in the data that have signals above a determined **`threshold`** (usually defined as a multiple of the standard deviation) and that have more than a defined number of adjoining pixels, **`npixels`**. The data can also optionally be smoothed using a kernel, **`filter_kernel`**, before applying the threshold cut.\n",
-    "\n",
-    "The `detect_sources()` function returns a `SegmentationImage` object: an array in which each object is labeled with an integer. As a simple example, a segmentation map containing two distinct sources might look like this:\n",
-    "\n",
-    "```\n",
-    "0 0 0 0 0 0 0 0 0 0\n",
-    "0 1 1 0 0 0 0 0 0 0\n",
-    "1 1 1 1 1 0 0 0 2 0\n",
-    "1 1 1 1 0 0 0 2 2 2\n",
-    "1 1 1 0 0 0 2 2 2 2\n",
-    "1 1 1 1 0 0 0 2 2 0\n",
-    "1 1 0 0 0 0 2 2 0 0\n",
-    "0 1 0 0 0 0 2 0 0 0\n",
-    "0 0 0 0 0 0 0 0 0 0\n",
-    "```\n",
-    "where all of the pixels labeled `1` belong to the first source, all those labeled `2` belong to the second, and all null pixels are designated to be background.\n",
-    "\n",
-    "Let's see what the segmentation map for our XDF data will look like."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fdc588d5-f41b-4576-8585-c917940472e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from photutils.utils import make_random_cmap"
+    "Next, we use image segmentation to find the sources."
    ]
   },
   {
@@ -151,12 +126,21 @@
     "threshold = 5. * std\n",
     "npixels = 10\n",
     "fwhm = 5\n",
-    "kernel = make_2dgaussian_kernel(fwhm, size=5)\n",
+    "kernel_size = 5\n",
+    "kernel = make_2dgaussian_kernel(fwhm, size=kernel_size)\n",
     "convolved_data = convolve(data_subtracted.data, kernel, mask=ccd_2d_bkgdsub.mask)\n",
     "# Create a segmentation image\n",
     "segm = detect_sources(convolved_data, threshold, npixels, mask=ccd_2d_bkgdsub.mask)\n",
     "\n",
     "print('Found {} sources'.format(segm.max_label))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf95f3be-038e-412c-8324-039e1333d096",
+   "metadata": {},
+   "source": [
+    "This is roughly half the number of sources detected by star finding."
    ]
   },
   {
@@ -183,64 +167,22 @@
     "ax1.set_title('Original Data')\n",
     "\n",
     "# Plot the segmentation image\n",
-    "rand_cmap = make_random_cmap(seed=12345)\n",
-    "rand_cmap.set_under('black')\n",
-    "segplot = ax2.imshow(np.ma.masked_where(ccd_image.mask, segm), vmin=1, cmap=rand_cmap)\n",
+    "segplot = ax2.imshow(np.ma.masked_where(ccd_image.mask, segm), vmin=1, cmap=segm.cmap)\n",
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('Segmentation Map')\n",
     "\n",
     "# Define the colorbar\n",
-    "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
-    "cbar = plt.colorbar(segplot, cbar_ax)\n",
-    "cbar.set_label('Object Label', rotation=270, labelpad=30)"
+    "# cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
+    "# cbar = plt.colorbar(segplot, cbar_ax)\n",
+    "# cbar.set_label('Object Label', rotation=270, labelpad=30)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "418b2cdb-d160-4c18-b57d-3c4272ce7610",
+   "id": "360d72fc-fd47-4dd7-a575-97051be44405",
    "metadata": {},
    "source": [
-    "Compare the sources in original data to those in the segmentation image. Each color in the segmentation map denotes a separate source.\n",
-    "\n",
-    "You can easily see that larger galaxies are shown in the segmentation map as contiguous objects of the same color - for example, the two yellow and pink galaxies near (1200, 2500). Each pixel containing light from the same galaxy has been labeled as belonging to the same object."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9bb56ee-c640-4c69-976e-e6f2e3ef536c",
-   "metadata": {},
-   "source": [
-    "For a closer look, let's see what the sources we found with `find_peaks` look like in this segmentation map:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1d61489-3595-46b9-aaaf-57f11ac2126d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with warnings.catch_warnings(action=\"ignore\"):\n",
-    "    sources_findpeaks = find_peaks(ccd_2d_bkgdsub.data - median, mask=ccd_2d_bkgdsub.mask,\n",
-    "                                   threshold=threshold, box_size=29,\n",
-    "                                   centroid_func=centroid_2dg)\n",
-    "\n",
-    "# Add an ID column to the find_peaks result\n",
-    "sources_findpeaks[\"source_id\"] = np.arange(len(sources_findpeaks))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3e15e7d8-3aa9-4b75-ab03-88d3d6461eb5",
-   "metadata": {},
-   "source": [
-    "#### Analyzing `source_properties`\n",
-    "\n",
-    "Once we have a `SegmentationImage` object, `photutils` provides many powerful tools to manipulate and analyze the identified objects. \n",
-    "\n",
-    "Individual objects within the segmentation map can be altered using methods such as `relabel` to change the labels of objects, `remove_labels` to remove objects, or `deblend_sources` to separating overlapping sources that were incorrectly labeled as one source.\n",
-    "\n",
-    "However, perhaps the most powerful aspect of the `SegmentationImage` is the ability to create a catalog using [SourceCatalog](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.SourceCatalog.html#photutils.segmentation.SourceCatalog) to measure the centroids, photometry, and morphology of the detected objects:"
+    "As in the previous notebook, we construct a [SourceCatalog](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.SourceCatalog.html#photutils.segmentation.SourceCatalog) to obtain more information about the sources detected by segmentation."
    ]
   },
   {
@@ -251,9 +193,7 @@
    "outputs": [],
    "source": [
     "catalog = SourceCatalog(ccd_2d_bkgdsub.data, segm)\n",
-    "table = catalog.to_table()\n",
-    "print(table)\n",
-    "print(table.colnames)"
+    "table = catalog.to_table()"
    ]
   },
   {
@@ -261,8 +201,6 @@
    "id": "350de88c-eaa6-46d0-a964-d873d77cd297",
    "metadata": {},
    "source": [
-    "#### Creating apertures from segmentation data\n",
-    "\n",
     "We can use this information to create isophotal ellipses for each identified source. These ellipses can also later be used as photometric apertures."
    ]
   },
@@ -284,6 +222,16 @@
     "    b = obj.semiminor_sigma.value * r\n",
     "    theta = obj.orientation\n",
     "    apertures.append(EllipticalAperture(position, a, b, theta=theta))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9bb56ee-c640-4c69-976e-e6f2e3ef536c",
+   "metadata": {},
+   "source": [
+    "### Sources detected by image segmentation\n",
+    "\n",
+    "All of the bright sources are detected by image segmentation."
    ]
   },
   {
@@ -327,13 +275,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0809e5da-0489-4a4f-98cd-97f7900a3e87",
+   "metadata": {},
+   "source": [
+    "## Comparison with other detection methods\n",
+    "\n",
+    "We rerun peak finding and star finding on this image so that we can compare the methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1d61489-3595-46b9-aaaf-57f11ac2126d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with warnings.catch_warnings(action=\"ignore\"):\n",
+    "    sources_findpeaks = find_peaks(ccd_2d_bkgdsub.data - median, mask=ccd_2d_bkgdsub.mask,\n",
+    "                                   threshold=threshold, box_size=29,\n",
+    "                                   centroid_func=centroid_2dg)\n",
+    "\n",
+    "# Add an ID column to the find_peaks result\n",
+    "sources_findpeaks[\"source_id\"] = np.arange(len(sources_findpeaks))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "19c62f54-3040-4ec8-9c12-f02d271e3ac4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "daofind = DAOStarFinder(fwhm=fwhm, threshold=threshold)\n",
+    "daofind = DAOStarFinder(fwhm=1.5 * fwhm, threshold=threshold)\n",
     "sources_dao = daofind(np.ma.masked_where(ccd_image.mask, ccd_image), mask=ccd_2d_bkgdsub.mask)"
    ]
   },
@@ -383,7 +357,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "The image above nicely captures the differences between the source detection methods we have discussed. [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) does an excellent job detecting the star-like sources in the image. [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) detects everything that [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) does but also has many false identifications. Image segmentation does an excellent job detecting sources though it misses some of the fainter sources found by [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder). This could likely be fixed by adjusting the asettings for image segmentation.\n",
+    "The image above nicely captures the differences between the source detection methods we have discussed. [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) does an excellent job detecting the star-like sources in the image. [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) detects almost everything that [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) does but also has many false identifications. Image segmentation does an excellent job detecting sources though it misses some of the fainter sources found by [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder). This could likely be fixed by adjusting the settings for image segmentation.\n",
     "\n",
     "The choice of source detection method in a case like may come down to whether you have additional constraints you want to impose. Recall that the [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder) allows to to provide a minimum separation of sources, for example. For performing aperture photometry that is useful since there is no way to separate sources with that technique."
    ]
@@ -405,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
