Fix notebook title

--- a/notebooks/photometry/01.04.02-image-segmentation-XDF.ipynb
+++ b/notebooks/photometry/01.04.02-image-segmentation-XDF.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "06c28589-66fe-422c-bcef-28df5a5b6583",
+   "metadata": {},
+   "source": [
+    "# Application to the XDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4a539fa2-f180-4b88-a620-da47c6af8270",
    "metadata": {},
    "source": [
