--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.use('../photutils_notebook_style.mplstyle')"
+    "plt.style.use('../../photutils_notebook_style.mplstyle')"
    ]
   },
   {
@@ -158,9 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set up the figure with subplots\n",
@@ -226,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import find_peaks\n",
+    "from photutils.detection import find_peaks\n",
     "from photutils.centroids import centroid_2dg"
    ]
   },
@@ -247,7 +245,7 @@
    "outputs": [],
    "source": [
     "sources_findpeaks = find_peaks(xdf_image.data, mask=xdf_image.mask, \n",
-    "                               threshold=20.*std, box_size=30, \n",
+    "                               threshold=20.*std, box_size=29, \n",
     "                               centroid_func=centroid_2dg)     \n",
     "# Display the table\n",
     "sources_findpeaks"
@@ -302,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import CircularAperture"
+    "from photutils.aperture import CircularAperture, EllipticalAperture, EllipticalAnnulus"
    ]
   },
   {
@@ -312,7 +310,7 @@
    "outputs": [],
    "source": [
     "# Define the aperture\n",
-    "position = (sources_findpeaks['x_centroid'], sources_findpeaks['y_centroid'])\n",
+    "position = list((x, y) for x, y in zip(sources_findpeaks['x_centroid'], sources_findpeaks['y_centroid']))\n",
     "radius = 10.  # pixels\n",
     "circular_aperture = CircularAperture(position, r=radius)"
    ]
@@ -371,8 +369,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import (detect_sources, source_properties, \\\n",
-    "                       EllipticalAnnulus, EllipticalAperture)"
+    "# from photutils import (detect_sources, source_properties, \\\n",
+    "#                        EllipticalAnnulus, EllipticalAperture)\n",
+    "\n",
+    "from photutils.segmentation import detect_sources, SourceCatalog"
    ]
   },
   {
@@ -387,9 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define threshold and minimum object size\n",
@@ -400,7 +398,7 @@
     "segm = detect_sources(xdf_image.data, threshold, npixels)\n",
     "\n",
     "# Create a catalog using source properties\n",
-    "catalog = source_properties(xdf_image.data, segm)\n",
+    "catalog = SourceCatalog(xdf_image.data, segm)\n",
     "table = catalog.to_table()\n",
     "\n",
     "# Display the table\n",
@@ -437,9 +435,9 @@
     "# Create the apertures\n",
     "elliptical_apertures = []\n",
     "for obj in catalog:\n",
-    "    position = (obj.xcentroid.value, obj.ycentroid.value)\n",
-    "    a = obj.semimajor_axis_sigma.value * r  # pixel\n",
-    "    b = obj.semiminor_axis_sigma.value * r  # pixel\n",
+    "    position = (obj.xcentroid, obj.ycentroid)\n",
+    "    a = obj.semimajor_sigma.value * r  # pixel\n",
+    "    b = obj.semiminor_sigma.value * r  # pixel\n",
     "    theta = obj.orientation.to(u.rad).value\n",
     "    elliptical_apertures.append(EllipticalAperture(position, a, b, theta=theta))"
    ]
@@ -512,6 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## UPDATE TO MODERN WCS API\n",
     "If we wanted to generate `SkyEllipticalAperture` objects from the get-go, we could have used that WCS object in the following way:"
    ]
   },
@@ -521,7 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import SkyEllipticalAperture\n",
+    "from photutils.aperture import SkyEllipticalAperture\n",
     "from astropy.coordinates import SkyCoord\n",
     "\n",
     "r = 3.  # pixels; approximate isophotal extent of semimajor axis\n",
@@ -530,13 +529,13 @@
     "sky_elliptical_apertures = []\n",
     "for obj in catalog:\n",
     "    # Convert the centroids into RA/Dec using WCS\n",
-    "    ra, dec = wcs.all_pix2world(obj.xcentroid.value, obj.ycentroid.value, 0)\n",
+    "    ra, dec = wcs.all_pix2world(obj.xcentroid, obj.ycentroid, 0)\n",
     "    # Convert the positions to an Astropy SkyCoord object, with units!\n",
     "    sky_position = SkyCoord(ra, dec, unit=u.deg)\n",
     "    \n",
     "    # Define the elliptical parameters, now with units\n",
-    "    a = obj.semimajor_axis_sigma.value * r * u.pix\n",
-    "    b = obj.semiminor_axis_sigma.value * r * u.pix\n",
+    "    a = obj.semimajor_sigma.value * r * u.pix\n",
+    "    b = obj.semiminor_sigma.value * r * u.pix\n",
     "    theta = obj.orientation.value  * u.rad\n",
     "    \n",
     "    # Convert the theta from radians from X axis to the radians from North \n",
@@ -592,7 +591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import aperture_photometry\n",
+    "from photutils.aperture import aperture_photometry\n",
     "from astropy.table import QTable"
    ]
   },
@@ -711,9 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8, 5))\n",
@@ -783,10 +780,10 @@
     "# Create the apertures\n",
     "elliptical_annuli = []\n",
     "for obj in catalog:\n",
-    "    position = (obj.xcentroid.value, obj.ycentroid.value)\n",
-    "    a_in = obj.semimajor_axis_sigma.value * r_in\n",
-    "    a_out = obj.semimajor_axis_sigma.value * r_out\n",
-    "    b_out = obj.semiminor_axis_sigma.value * r_out\n",
+    "    position = (obj.xcentroid, obj.ycentroid)\n",
+    "    a_in = obj.semimajor_sigma.value * r_in\n",
+    "    a_out = obj.semimajor_sigma.value * r_out\n",
+    "    b_out = obj.semiminor_sigma.value * r_out\n",
     "    theta = obj.orientation.to(u.rad).value\n",
     "    elliptical_annuli.append(EllipticalAnnulus(position, a_in, a_out, b_out, theta=theta))"
    ]
@@ -987,7 +984,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1001,9 +998,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
