Minor cosmetic fixes

--- a/notebooks/photometry/04.01.02-aperture-photometry-xdf.ipynb
+++ b/notebooks/photometry/04.01.02-aperture-photometry-xdf.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.use('../../photutils_notebook_style.mplstyle')"
+    "plt.style.use('../photutils_notebook_style.mplstyle')"
    ]
   },
   {
@@ -721,7 +721,7 @@
     "plt.xscale('log')\n",
     "plt.title('Count Rate v. Aperture Area')\n",
     "plt.xlabel('Aperture Area [pixels$^2$]')\n",
-    "plt.ylabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')))"
+    "plt.ylabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')));"
    ]
   },
   {
@@ -821,7 +821,7 @@
     "\n",
     "# Crop to show an inset of the data\n",
     "ax1.set_xlim(2000, 3000)\n",
-    "ax1.set_ylim(2000, 1000)"
+    "ax1.set_ylim(2000, 1000);"
    ]
   },
   {
