Use angular scale for sky apertures

--- a/notebooks/photometry/04.01.02-aperture-photometry-xdf.ipynb
+++ b/notebooks/photometry/04.01.02-aperture-photometry-xdf.ipynb
@@ -532,10 +532,14 @@
     "    ra, dec = wcs.all_pix2world(obj.xcentroid, obj.ycentroid, 0)\n",
     "    # Convert the positions to an Astropy SkyCoord object, with units!\n",
     "    sky_position = SkyCoord(ra, dec, unit=u.deg)\n",
-    "    \n",
+    "\n",
+    "    # NOT 100% SURE THIS IS CORRECT -- PROJ PLANE IS NOT IMAGE PLANE\n",
+    "    # Get the pixel scale, i.e. the angular size of a pixel, from the wcs.\n",
+    "    pixel_scale_x, pixel_scale_y = wcs.proj_plane_pixel_scales()\n",
+    "\n",
     "    # Define the elliptical parameters, now with units\n",
-    "    a = obj.semimajor_sigma.value * r * u.pix\n",
-    "    b = obj.semiminor_sigma.value * r * u.pix\n",
+    "    a = obj.semimajor_sigma.value * r * pixel_scale_x\n",
+    "    b = obj.semiminor_sigma.value * r * pixel_scale_y\n",
     "    theta = obj.orientation.value  * u.rad\n",
     "    \n",
     "    # Convert the theta from radians from X axis to the radians from North \n",
@@ -645,7 +649,7 @@
     "\n",
     "Since our elliptical apertures are distinct apertures at distinct positions, we need to do a little more work to get a single table of photometric values.\n",
     "\n",
-    "(This step will take a while, almost 5 minutes, so hang tight!)"
+    "(This step will take a while, almost NO IT DOESN'T 5 minutes, so hang tight!)"
    ]
   },
   {
