Use local file instead of URL

--- a/notebooks/photometry/04.01.02-aperture-photometry-xdf.ipynb
+++ b/notebooks/photometry/04.01.02-aperture-photometry-xdf.ipynb
@@ -127,7 +127,8 @@
    "outputs": [],
    "source": [
     "url = 'https://archive.stsci.edu/pub/hlsp/xdf/hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits'\n",
-    "xdf_image = CCDData.read(url, unit=u.electron / u.s)"
+    "file = 'hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits'\n",
+    "xdf_image = CCDData.read(file, unit=u.electron / u.s)"
    ]
   },
   {
