Use high level WCS API

--- a/notebooks/photometry/04.01.02-aperture-photometry-xdf.ipynb
+++ b/notebooks/photometry/04.01.02-aperture-photometry-xdf.ipynb
@@ -511,7 +511,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## UPDATE TO MODERN WCS API\n",
     "If we wanted to generate `SkyEllipticalAperture` objects from the get-go, we could have used that WCS object in the following way:"
    ]
   },
@@ -530,7 +529,8 @@
     "sky_elliptical_apertures = []\n",
     "for obj in catalog:\n",
     "    # Convert the centroids into RA/Dec using WCS\n",
-    "    ra, dec = wcs.all_pix2world(obj.xcentroid, obj.ycentroid, 0)\n",
+    "    coord = wcs.pixel_to_world_values([[obj.xcentroid, obj.ycentroid]])\n",
+    "    ra, dec = coord[0]\n",
     "    # Convert the positions to an Astropy SkyCoord object, with units!\n",
     "    sky_position = SkyCoord(ra, dec, unit=u.deg)\n",
     "\n",
