Format colorbar properly

--- a/notebooks/photometry/04.01.02-aperture-photometry-xdf.ipynb
+++ b/notebooks/photometry/04.01.02-aperture-photometry-xdf.ipynb
@@ -813,9 +813,18 @@
     "    aperture.plot(color='white', alpha=0.7, axes=ax1)\n",
     "\n",
     "# Define the colorbar\n",
-    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
-    "cbar.ax.set_yticklabels(labels)\n",
+    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
+    "\n",
+    "def format_colorbar(bar):\n",
+    "    # Add minor tickmarks\n",
+    "    bar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
+    "\n",
+    "    # Force the labels to be displayed as powers of ten and only at exact powers of ten\n",
+    "    bar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
+    "    labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(bar.ax.get_yticks())]\n",
+    "    bar.ax.set_yticklabels(labels)\n",
+    "\n",
+    "format_colorbar(cbar)\n",
     "\n",
     "# Define labels\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
