Update contributor list

--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -126,6 +126,7 @@
     "+ Simon Conseil\n",
     "+ Lia Corrales\n",
     "+ Kelle Cruz\n",
+    "+ Stephanie T. Douglas\n",
     "+ Adam Ginsburg\n",
     "+ Johannes Goller\n",
     "+ Yash Gondhalekar\n",
