Update function to create simulated stars image

--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -122,6 +122,7 @@
     "The following people contributed to this work by making suggestions, testing\n",
     "code, or providing feedback on drafts. We are grateful for their assistance!\n",
     "\n",
+    "+ Larry Bradley\n",
     "+ Nicolás Cardiel\n",
     "+ Simon Conseil\n",
     "+ Lia Corrales\n",
@@ -275,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
