--- a/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
+++ b/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
@@ -573,30 +573,18 @@
     "    \"\"\"\n",
     "    Add some stars to the image.\n",
     "    \"\"\"\n",
-    "    from photutils.datasets import make_random_gaussians_table, make_gaussian_sources_image\n",
-    "    # Most of the code below is a direct copy/paste from\n",
-    "    # https://photutils.readthedocs.io/en/stable/_modules/photutils/datasets/make.html#make_100gaussians_image\n",
-    "    \n",
-    "    flux_range = [max_counts/10, max_counts]\n",
-    "    \n",
-    "    y_max, x_max = image.shape\n",
-    "    xmean_range = [0.1 * x_max, 0.9 * x_max]\n",
-    "    ymean_range = [0.1 * y_max, 0.9 * y_max]\n",
-    "    xstddev_range = [4, 4]\n",
-    "    ystddev_range = [4, 4]\n",
-    "    params = dict([('amplitude', flux_range),\n",
-    "                  ('x_mean', xmean_range),\n",
-    "                  ('y_mean', ymean_range),\n",
-    "                  ('x_stddev', xstddev_range),\n",
-    "                  ('y_stddev', ystddev_range),\n",
-    "                  ('theta', [0, 2*np.pi])])\n",
+    "    from photutils.datasets import make_model_image, make_model_params\n",
+    "    from photutils.psf import CircularGaussianPSF\n",
     "\n",
-    "    sources = make_random_gaussians_table(number, params,\n",
-    "                                          seed=12345)\n",
-    "    \n",
-    "    star_im = make_gaussian_sources_image(image.shape, sources)\n",
-    "    \n",
-    "    return star_im"
+    "    psf_model = CircularGaussianPSF(fwhm=9.4)\n",
+    "    max_counts *= 100  # approx. peak amplitude to flux\n",
+    "    params = make_model_params(image.shape, n_sources=number,\n",
+    "                               flux=(max_counts / 10, max_counts),\n",
+    "                               min_separation=20,\n",
+    "                               border_size=20, seed=12345)\n",
+    "\n",
+    "    return make_model_image(image.shape, psf_model, params,\n",
+    "                            progress_bar=True)"
    ]
   },
   {
@@ -678,7 +666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -692,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
