Update segmentation tools

--- a/notebooks/07-01-Creating-a-sky-flat.ipynb
+++ b/notebooks/07-01-Creating-a-sky-flat.ipynb
@@ -27,7 +27,7 @@
     "from astropy import units as u\n",
     "from astropy.stats import mad_std\n",
     "\n",
-    "from photutils import detect_threshold, detect_sources, source_properties\n",
+    "from photutils.segmentation import detect_threshold, detect_sources, SourceCatalog\n",
     "\n",
     "import ccdproc as ccdp"
    ]
@@ -135,9 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ifc_raw = ccdp.ImageFileCollection(sky_flat_bad_raw)\n",
@@ -227,15 +225,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import detect_threshold, detect_sources, source_properties"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "foo = detect_threshold(an_im, 2)"
    ]
   },
@@ -272,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "moo = source_properties(an_im.data, arf)"
+    "moo = SourceCatalog(an_im.data, arf)"
    ]
   },
   {
@@ -312,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -326,9 +315,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
