--- a/notebooks/08-03-Cosmic-ray-removal.ipynb
+++ b/notebooks/08-03-Cosmic-ray-removal.ipynb
@@ -102,7 +102,7 @@
     "from astropy.nddata import block_replicate\n",
     "from astropy import units as u\n",
     "import ccdproc as ccdp\n",
-    "from photutils import detect_sources\n",
+    "from photutils.segmentation import detect_sources\n",
     "\n",
     "from convenience_functions import show_image, display_cosmic_rays"
    ]
@@ -650,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
