--- a/v/dev/_sources/notebooks/00-00-Preface.ipynb
+++ b/v/dev/_sources/notebooks/00-00-Preface.ipynb
@@ -138,6 +138,7 @@
     "+ Kris Stern\n",
     "+ Thomas Stibor\n",
     "+ Sarah Tuttle\n",
+    "+ Steve Marshall\n",
     "\n",
     "If you have provided feedback and are not listed above, we apologize -- please\n",
     "[open an issue here](https://github.com/astropy/ccd-reduction-and-photometry-guide/issues/new) so we can fix it."
