--- a/v/dev/_sources/notebooks/01-05-Calibration-overview.ipynb
+++ b/v/dev/_sources/notebooks/01-05-Calibration-overview.ipynb
@@ -100,9 +100,9 @@
     "gain = 1.0\n",
     "noise_amount = 1500 \n",
     "\n",
-    "stars_with_noise = imsim.stars(image, 50, max_counts=2000, fwhm=10) + imsim.read_noise(image, noise_amount, gain=gain)\n",
+    "stars_with_noise = imsim.stars(image, 50, max_counts=2500, fwhm=10) + imsim.read_noise(image, noise_amount, gain=gain)\n",
     "\n",
-    "show_image(stars_with_noise, cmap='gray', percu=99.9)\n",
+    "show_image(stars_with_noise, cmap='gray', percu=50)\n",
     "plt.title('Stars with noise')"
    ]
   },
@@ -128,7 +128,7 @@
    "source": [
     "incorrect_attempt_to_remove_noise = stars_with_noise - imsim.read_noise(image, noise_amount, gain=gain)\n",
     "\n",
-    "show_image(incorrect_attempt_to_remove_noise, cmap='gray', percu=99.9)"
+    "show_image(incorrect_attempt_to_remove_noise, cmap='gray', percu=50)"
    ]
   },
   {
@@ -319,7 +319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -333,9 +333,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
